# football-teams-evolution

./: .gitignore  README.md  requirements.txt  ruff.toml
Docs/: Football_Teams_Evolution_Report.tex
apps/dashboard/: README.md  pyproject.toml
apps/dashboard/src/football_dashboard/: app.py
data/: create_data_for_graph.py  fc-barcelona_match_links.txt  find_match_links.py  footballia_scraper.py
data/db/: mock_football.sqlite3
data/files/: example_match_data.csv  fc-barcelonamatch_data.csv
docs/: project_report.md  project_report.tex
football_teams_evolution/: config.py  demo_data.py  graph_processor.py  main.py  requirements.txt  scraper.py
football_teams_evolution/data/: squads_cache.json
football_teams_evolution/graphs/: graph_2010.txt  graph_2011.txt  graph_2012.txt  graph_2013.txt  graph_2014.txt  graph_2015.txt  graph_2016.txt  graph_2017.txt  graph_2018.txt  graph_2019.txt  graph_2020.txt  graph_2021.txt  graph_2022.txt  graph_2023.txt  graph_2024.txt  graph_AC_Milan.txt  graph_AS_Roma.txt  graph_Barcelona.txt  graph_Bayern_Munich.txt  graph_Legia_Warszawa.txt  graph_Liverpool.txt  graph_Manchester_United.txt  graph_Real_Madrid.txt
football_teams_evolution/java/: pom.xml
football_teams_evolution/output/: football_graph.dgs  football_graph.gexf  player_edges.txt  statistics.json
graph/FootballGraph/: pom.xml
graph/FootballGraph/files/: fc-barcelona_edges.csv
java/graph-runner/: pom.xml
scripts/: ingest_multiple_teams.py  merge_databases.py  populate_mock_data.py  run_graph_runner.py
(+4 files in other folders)
