[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "football-dashboard"
version = "0.1.0"
description = "Streamlit dashboard for browsing football evolution DB and exporting DGS graphs."
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "streamlit>=1.36.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/football_dashboard"]
